<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/actionTopRated"
        android:orderInCategory="1"
        android:title="@string/action_orderBy_TopRated"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actionPopular"
        android:orderInCategory="2"
        android:title="@string/action_orderBy_Popular"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actionNowPlaying"
        android:orderInCategory="3"
        android:title="@string/action_orderBy_NowPlaying"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actionLatest"
        android:orderInCategory="4"
        android:title="@string/action_orderBy_Latest"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actionUpcoming"
        android:orderInCategory="5"
        android:title="@string/action_orderBy_Upcoming"
        app:showAsAction="ifRoom"/>
</menu>